tests/ui/higher-rank-trait-bounds/hrtb-wrong-kind.stderr
error: only lifetime parameters can be used in this context
  --> $DIR/hrtb-wrong-kind.rs:1:18
   |
LL | fn a() where for<T> T: Copy {}
   |                  ^

error: only lifetime parameters can be used in this context
  --> $DIR/hrtb-wrong-kind.rs:4:24
   |
LL | fn b() where for<const C: usize> [(); C]: Copy {}
   |                        ^

error: aborting due to 2 previous errors

